--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<head></head>
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 <body>
   Test
   <h1>This is an example of the ability to create a web site on github</h1>
